# game-animation

./: CMakeLists.txt
app/: main.cpp
src/include/common/: common_header.hpp
src/tool/: logger.cpp
src/tool/include/tool/: logger.hpp
src/window/: window.cpp
src/window/include/window/: window.hpp
